[package]
name = "irodori-extension-iceberg"
version = "0.1.0"
edition = "2021"
license = "MIT OR 0BSD"
description = "Irodori Table native connector extension."
repository = "https://github.com/hjosugi/irodori-extension-iceberg"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_iceberg"
crate-type = ["cdylib", "rlib"]

[dependencies]
duckdb = { version = "1", default-features = false, features = ["bundled"] }
serde_json = "1"

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
