[package]
name = "irodori-extension-iceberg"
version = "0.1.3"
edition = "2021"
license = "0BSD"
description = "Native Irodori Table connector extension for Iceberg."
repository = "https://github.com/hjosugi/irodori-extension-iceberg"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_iceberg"
crate-type = ["cdylib", "rlib"]

[dependencies]
irodori-connector-abi = { git = "https://github.com/hjosugi/irodori-kit", tag = "v0.6.0" }
duckdb = { version = "1", default-features = false }
serde_json = "1"
# REST catalog client. TLS follows the fleet convention: rustls with the ring
# provider only (no aws-lc), matching irodori-table#148/#154.
ureq = { version = "2", default-features = false, features = ["tls"] }

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
